backhomesafe: mainscreen: about us -> source code
* it points back to sc anyways.

Signed-off-by: Wiley Lau <henloboii@protonmail.ch>

--- a/src/locales/english/mainScreen.json
+++ b/src/locales/english/mainScreen.json
@@ -43,7 +43,7 @@
       },
       "qr_generator": "QR Code Generator",
       "reset": "Reset All Data",
-      "about_us": "About BackHomeSafe",
+      "about_us": "Source code",
       "disclaimer": "Disclaimer",
       "change_log": "Change Log",
       "report_issue": "Bug Report",
