backhomesafe: version -> advanced
* really shouldn't use a version number as a settings subheader.

* add strings for "advanced" and create a dummy subheader for version number.

Signed-off-by: Wiley Lau <henloboii@protonmail.ch>

--- a/src/locales/english/mainScreen.json
+++ b/src/locales/english/mainScreen.json
@@ -32,7 +32,8 @@
     "section": {
       "common": "Common",
       "lab": "Lab",
-      "version": "Version"
+      "version": "Version",
+      "advanced": "Advanced"
     },
     "item": {
       "camera_setting": "Camera Settings",
