--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -32,7 +32,8 @@
     "section": {
       "common": "常用",
       "lab": "實驗室",
-      "version": "版本"
+      "version": "版本",
+      "advanced": "進階"
     },
     "item": {
       "camera_setting": "相機設定",
