backhomesafe: decommonify source and aboutus strings
Signed-off-by: Wiley Lau <henloboii@protonmail.ch>

--- a/src/locales/english/mainScreen.json
+++ b/src/locales/english/mainScreen.json
@@ -45,6 +45,7 @@
       "qr_generator": "QR Code Generator",
       "reset": "Reset All Data",
       "about_us": "Source code",
+      "source": "Source code",
       "disclaimer": "Disclaimer",
       "change_log": "Change Log",
       "report_issue": "Bug Report",
