--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -45,6 +45,7 @@
       "qr_generator": "生成二維碼",
       "reset": "重設所有資料",
       "about_us": "原始碼",
+      "source": "原始碼",
       "disclaimer": "免責聲明",
       "change_log": "更新紀錄",
       "report_issue": "回報問題",
